--- a/pages/rate/index.wxml
+++ b/pages/rate/index.wxml
@@ -1,2 +1,139 @@
 <!--pages/rate/index.wxml-->
-<text>pages/rate/index.wxml</text>
+<!--<text>pages/rate/index.wxml</text>-->
+<import src="../common/head.wxml" />
+<import src="../common/foot.wxml" />
+
+<view class="container">
+  <!--<template is="head" data="{{title: '点评'}}"/>-->
+
+  <view class="page-body">
+    <form catchsubmit="formSubmit" catchreset="formReset">
+
+
+      <view class="weui-cells__title">开课院系</view>
+      <view class="weui-cells weui-cells_after-title">
+        <view class="weui-cell weui-cell_input">
+          <!--<view class="weui-cell__hd">
+            <view class="weui-label">当前选择</view>
+          </view>-->
+          <view class="weui-cell__bd">
+            <picker bindchange="bindPickerChange" value="{{index}}" range="{{depts}}">
+              <view class="weui-input">{{depts[index]}}</view>
+            </picker>
+          </view>
+        </view>
+      </view>
+
+      <view class="weui-cells__title">课程名称</view>
+      <view class="weui-cells weui-cells_after-title">
+          <view class="weui-cell weui-cell_input">
+          <view class="weui-cell__bd">
+              <input class="weui-input" name="input" placeholder="" />
+          </view>
+          </view>
+      </view>
+
+    
+      <view class="weui-cells__title">授课教师</view>
+      <view class="weui-cells weui-cells_after-title">
+          <view class="weui-cell weui-cell_input">
+          <view class="weui-cell__bd">
+              <input class="weui-input" name="input" placeholder="" />
+          </view>
+          </view>
+      </view>
+    
+      <view class="page-section page-section-gap">
+        <view class="page-section-title">是否要求考勤</view>
+        <radio-group name="radio">
+          <label><radio value="radio1"/>是</label>
+          <label><radio value="radio2"/>否</label>
+        </radio-group>
+      </view>
+
+      <!--<view class="page-section page-section-gap">
+        <view class="page-section-title">课程收获如何</view>
+        <radio-group name="radio">
+          <label><radio value="radio5"/>5分：课程收获极大</label>
+          <label><radio value="radio4"/>4分：课程收获不错</label>
+          <label><radio value="radio3"/>3分：中规中矩，没有什么亮点</label>
+          <label><radio value="radio2"/>2分：课程内容让人略有失望</label>
+          <label><radio value="radio1"/>1分：这门课不值得出勤</label>
+        </radio-group>
+      </view>-->
+
+        <view class="page-section page-section-gap">
+        <view class="page-section-title">课程收获如何</view>
+        <view class="body-view">
+            <slider value="100" bindchange="sliderGainChange" min="0" max="4" value="2" show-value/>
+        </view>
+        </view>
+        
+        <view class="page-section page-section-gap">
+        <view class="page-section-title">课程难度如何</view>
+        <view class="body-view">
+            <slider value="100" bindchange="sliderDifficultyChange" min="0" max="4" value="2" show-value/>
+        </view>
+        </view>
+
+      <!--<view class="page-section page-section-gap">
+        <view class="page-section-title">课程难度如何</view>
+        <radio-group name="radio">
+          <label><radio value="radio5"/>5分：课程难度极大，极富挑战性</label>
+          <label><radio value="radio4"/>4分：课程难度较大，但可以接受</label>
+          <label><radio value="radio3"/>3分：课程难度适中</label>
+          <label><radio value="radio2"/>2分：课程难度比较简单</label>
+          <label><radio value="radio1"/>1分：大水课，不如自学</label>
+        </radio-group>
+      </view>-->
+
+      <view class="page-section page-section-gap">
+        <view class="page-section-title">你的成绩</view>
+        <radio-group name="radio">
+          <label><radio value="radio43"/>A+</label>
+          <label><radio value="radio40"/>A</label>
+          <label><radio value="radio37"/>A-</label>
+          <label><radio value="radio33"/>B+</label>
+          <label><radio value="radio30"/>B</label>
+          <label><radio value="radio27"/>B-</label>
+          <label><radio value="radio23"/>C+</label>
+          <label><radio value="radio20"/>C</label>
+          <label><radio value="radio17"/>C-</label>
+          <label><radio value="radio13"/>D+</label>
+          <label><radio value="radio10"/>D</label>
+          <label><radio value="radio00"/>F</label>
+          <label><radio value="radio1"/>P</label>
+          <label><radio value="radio3"/>未出 / 不愿透露</label>
+        </radio-group>
+      </view>
+
+      <view class="page-section page-section-gap">
+        <view class="page-section-title">课程属性</view>
+        <checkbox-group name="checkbox">
+          <label><checkbox value="checkbox1"/>文素课</label>
+          <label><checkbox value="checkbox2"/>文核课</label>
+          <label><checkbox value="checkbox3"/>英语课</label>
+          <label><checkbox value="checkbox4"/>读写 / 理工认证课</label>
+        </checkbox-group>
+      </view>
+
+      <view class="page-section">
+        <view class="page-section-title">你的评价</view>
+        <view class="weui-cells weui-cells_after-title">
+          <view class="weui-cell">
+            <view class="weui-cell__bd">
+              <textarea class="weui-textarea" name="textarea" auto-height placeholder="这课怎么样？" />
+            </view>
+          </view>
+        </view>
+      </view>
+
+      <view class="btn-area">
+        <button type="primary" formType="submit">提交</button>
+        <button formType="reset">清空</button>
+      </view>
+    </form>
+  </view>
+
+  <template is="foot" />
+</view>
