--- a/pages/rate/index.wxss
+++ b/pages/rate/index.wxss
@@ -1,1 +1,15 @@
 /* pages/rate/index.wxss */
+@import "../common/lib/weui.wxss";
+
+label {
+  display: inline-block;
+  min-width: 270rpx;
+  margin-right: 20rpx;
+}
+form{
+  width: 100%;
+}
+.picker-text {
+  margin-left: 20rpx;
+  position: relative;
+}
