added professor text and attendance text in detail page

--- a/pages/detail/index.wxml
+++ b/pages/detail/index.wxml
@@ -13,11 +13,15 @@
     <text class="c-block wx-text_title" data-c_e_id="wx_text_55c207ca">计算机组成与系统结构
       <br/>
     </text>
-    <text class="c-block wx-text_description" data-c_e_id="wx_text_46bc700d">课程收获：
+    <text class="c-block wx-text_professor">陈文光 - 计算机系
     </text>
-    <text class="c-block wx-text_description" data-c_e_id="wx_text01771f14">课程难度：
+    <text class="c-block wx-text_description">课程收获：
     </text>
-    <text class="c-block wx-text_description" data-c_e_id="wx_textf1b12ef8">平均成绩：
+    <text class="c-block wx-text_description">课程难度：
+    </text>
+    <text class="c-block wx-text_description">平均成绩：
+    </text>
+    <text class="c-block wx-text_description">0% 的同学认为这门课要求考勤
     </text>
   </view>
 </view>
