--- a/pages/browse/index.wxss
+++ b/pages/browse/index.wxss
@@ -24,3 +24,15 @@
 .weui-cell{
     padding: 12px 15px 12px 35px;
 }
+
+.wx-professor {
+  color: #999999;
+  font-size: 14px;
+  line-height: 1.2;
+  margin-bottom: 10px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+}
