--- a/pages/rate/index.wxml
+++ b/pages/rate/index.wxml
@@ -7,7 +7,7 @@
   <!--<template is="head" data="{{title: '点评'}}"/>-->
 
   <view class="page-body">
-    <form catchsubmit="formSubmit" catchreset="formReset">
+    <form bindsubmit="formSubmit" bindreset="formReset">
 
 
       <view class="weui-cells__title">开课院系</view>
@@ -44,7 +44,7 @@
       </view>
     
       <view class="page-section page-section-gap">
-        <view class="page-section-title">是否要求考勤</view>
+        <view class="section-title">是否要求考勤</view>
         <radio-group name="radio">
           <label><radio value="radio1"/>是</label>
           <label><radio value="radio2"/>否</label>
@@ -63,14 +63,14 @@
       </view>-->
 
         <view class="page-section page-section-gap">
-        <view class="page-section-title">课程收获如何</view>
+        <view class="section-title">课程收获如何</view>
         <view class="body-view">
             <slider value="100" bindchange="sliderGainChange" min="0" max="4" value="2" show-value/>
         </view>
         </view>
         
         <view class="page-section page-section-gap">
-        <view class="page-section-title">课程难度如何</view>
+        <view class="section-title">课程难度如何</view>
         <view class="body-view">
             <slider value="100" bindchange="sliderDifficultyChange" min="0" max="4" value="2" show-value/>
         </view>
@@ -88,7 +88,7 @@
       </view>-->
 
       <view class="page-section page-section-gap">
-        <view class="page-section-title">你的成绩</view>
+        <view class="section-title">你的成绩</view>
         <radio-group name="radio">
           <label><radio value="radio43"/>A+</label>
           <label><radio value="radio40"/>A</label>
@@ -108,7 +108,7 @@
       </view>
 
       <view class="page-section page-section-gap">
-        <view class="page-section-title">课程属性</view>
+        <view class="section-title">课程属性</view>
         <checkbox-group name="checkbox">
           <label><checkbox value="checkbox1"/>文素课</label>
           <label><checkbox value="checkbox2"/>文核课</label>
@@ -117,16 +117,16 @@
         </checkbox-group>
       </view>
 
-      <view class="page-section">
-        <view class="page-section-title">你的评价</view>
+
+        <view class="weui-cells__title">你的评价</view>
         <view class="weui-cells weui-cells_after-title">
           <view class="weui-cell">
             <view class="weui-cell__bd">
-              <textarea class="weui-textarea" name="textarea" auto-height placeholder="这课怎么样？" />
+              <textarea class="weui-textarea" name="textarea" auto-height maxlength="1000" placeholder="这课怎么样？(最多1000字)" />
             </view>
           </view>
         </view>
-      </view>
+
 
       <view class="btn-area">
         <button type="primary" formType="submit">提交</button>
