--- a/pages/rate/index.wxss
+++ b/pages/rate/index.wxss
@@ -13,3 +13,11 @@ form{
   margin-left: 20rpx;
   position: relative;
 }
+
+.section-title {
+  font-size: 28rpx;
+  color: #999999;
+  margin-top: .77em;
+  margin-bottom: .3em;
+  padding-right: 30rpx;
+}
