--- a/pages/rate/index.wxml
+++ b/pages/rate/index.wxml
@@ -17,7 +17,7 @@
             <view class="weui-label">当前选择</view>
           </view>-->
           <view class="weui-cell__bd">
-            <picker name="dept" bindchange="bindPickerChange" value="{{index}}" range="{{depts}}">
+            <picker name="dept" bindchange="bindPickerChange" value="{{depts[index]}}" range="{{depts}}">
               <view class="weui-input">{{depts[index]}}</view>
             </picker>
           </view>
