--- a/pages/browse/index.wxml
+++ b/pages/browse/index.wxml
@@ -48,9 +48,11 @@
 
     <view class="weui-panel__bd">
       <view wx:for="{{courses}}" wx:for-item="course" wx:key="objectId" bindtap="toDetail" class="weui-media-box weui-media-box_text">
-        <view class="weui-media-box__title">{{course.courseName}}</view>
-        <view class="wx-professor">{{course.professorName}} - {{course.dept}}</view>
-        <view class="weui-media-box__desc">课程收获：{{course.avgGain}}/4.0 课程难度：{{course.avgDifficulty}}/4.0 平均成绩：{{course.avgGrade}}/4.0</view>
+        <view data-id="{{course.objectId}}" bindtap="toDetail">
+          <view class="weui-media-box__title">{{course.courseName}}</view>
+          <view class="wx-professor">{{course.professorName}} - {{course.dept}}</view>
+          <view class="weui-media-box__desc">课程收获：{{course.avgGain}}/4.0 课程难度：{{course.avgDifficulty}}/4.0 平均成绩：{{course.avgGrade}}/4.0</view>
+        </view>
       </view>
     </view>
 
