--- a/pages/browse/index.wxml
+++ b/pages/browse/index.wxml
@@ -4,7 +4,7 @@
 <import src="../common/head.wxml" />
 <import src="../common/foot.wxml" />
 <view class="page">
-  <view class="weui-search-bar">
+  <!--<view class="weui-search-bar">
     <view class="weui-search-bar__form">
       <view class="weui-search-bar__box">
         <icon class="weui-icon-search_in-box" type="search" size="14"></icon>
@@ -19,7 +19,7 @@
       </label>
     </view>
     <view class="weui-search-bar__cancel-btn" hidden="{{!inputShowed}}" bindtap="hideInput">取消</view>
-  </view>
+  </view>-->
   <view class="weui-cells searchbar-result" wx:if="{{inputVal.length > 0}}">
     <navigator url="" class="weui-cell" hover-class="weui-cell_active">
       <view class="weui-cell__bd">
