load 10 items once to save resources and delted date&time

--- a/pages/browse/index.wxml
+++ b/pages/browse/index.wxml
@@ -107,5 +107,15 @@
         </view>-->
   </view>
 
+  <view class="page__bd">
+    <view class="weui-loadmore" wx:if="{{loading}}">
+        <view class="weui-loading"></view>
+        <view class="weui-loadmore__tips">正在加载</view>
+    </view>
+    <view class="weui-loadmore weui-loadmore_line weui-loadmore_dot" wx:if="{{!loading}}">
+        <view class="weui-loadmore__tips weui-loadmore__tips_in-line weui-loadmore__tips_in-dot"></view>
+    </view>
+  </view>
+
   <template is="foot" />
 </view>
